<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_margin="5dp"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="198dp"
            android:layout_height="277dp"
            android:layout_margin="1dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imagefiel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/just_imageView"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="7dp"
                android:text="@string/f1"
                android:textColor="#040404"
                android:textSize="27sp" />

            <TextView
                android:id="@+id/explane"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="7dp"
                android:text="@string/f4"
                android:textColor="#6C6363"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/timestamp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:text="@string/f2" />


        </LinearLayout>


    </LinearLayout>

</LinearLayout>